<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    >


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:elevation="@dimen/dimen_2"
        app:cardBackgroundColor="@color/gray_light"
        android:layout_marginTop="@dimen/dimen_6"
        android:layout_marginHorizontal="@dimen/dimen_2"
        >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/memberImage"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:srcCompat="@drawable/member"
                />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="@dimen/dimen_16"
                android:paddingHorizontal="@dimen/dimen_8"
                >
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/memberName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/dimenSt_18"

                    />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/memberProfession"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profession"
                    android:textColor="@color/gray_darker"
                    android:textSize="@dimen/dimenSt_12"

                    />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/memberGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textColor="@color/gray_darker"
                    android:textSize="@dimen/dimenSt_12"

                    />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

</RelativeLayout>